src/app/app.component.scss
/*Side Navigation*/
#left-sidenav {
  width: 260px;
  color: #fff;
  background: #3f51b5;
  text-align: center;
}

#right-sidenav {
  width: 260px;
}

main {
  height: 100vh;
  padding: 5px;
  background-color: #fff;
  overflow-x: hidden;
}

#map {
display: flex;
justify-content: center;
}

